tests/macro/html-component-fail.stderr
error: expected component tag be of form `< .. />`
  --> $DIR/html-component-fail.rs:33:13
   |
33 |     html! { <ChildComponent> };
   |             ^^^^^^^^^^^^^^^^

error: unexpected end of input, expected identifier
  --> $DIR/html-component-fail.rs:34:31
   |
34 |     html! { <ChildComponent:: /> };
   |                               ^

error: unexpected end of input, expected identifier
  --> $DIR/html-component-fail.rs:35:34
   |
35 |     html! { <ChildComponent with /> };
   |                                  ^

error: unexpected token
  --> $DIR/html-component-fail.rs:36:29
   |
36 |     html! { <ChildComponent props /> };
   |                             ^^^^^

error: expected component tag be of form `< .. />`
  --> $DIR/html-component-fail.rs:37:13
   |
37 |     html! { <ChildComponent with props > };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected token
  --> $DIR/html-component-fail.rs:39:40
   |
39 |     html! { <ChildComponent with props () /> };
   |                                        ^^

error: expected identifier
  --> $DIR/html-component-fail.rs:40:29
   |
40 |     html! { <ChildComponent type=0 /> };
   |                             ^^^^

error: expected identifier
  --> $DIR/html-component-fail.rs:41:29
   |
41 |     html! { <ChildComponent invalid-prop-name=0 /> };
   |                             ^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected expression
  --> $DIR/html-component-fail.rs:43:37
   |
43 |     html! { <ChildComponent string= /> };
   |                                     ^

error[E0425]: cannot find value `blah` in this scope
  --> $DIR/html-component-fail.rs:38:34
   |
38 |     html! { <ChildComponent with blah /> };
   |                                  ^^^^ not found in this scope

error[E0609]: no field `unknown` on type `ChildProperties`
  --> $DIR/html-component-fail.rs:42:29
   |
42 |     html! { <ChildComponent unknown="unknown" /> };
   |                             ^^^^^^^ unknown field
   |
   = note: available fields are: `string`, `int`

error[E0599]: no method named `unknown` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:42:29
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `unknown` not found for this
...
42 |     html! { <ChildComponent unknown="unknown" /> };
   |                             ^^^^^^^

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:44:42
   |
44 |     html! { <ChildComponent int=1 string={} /> };
   |                                          ^^ expected struct `std::string::String`, found ()
   |
   = note: expected type `std::string::String`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:45:42
   |
45 |     html! { <ChildComponent int=1 string=3 /> };
   |                                          ^
   |                                          |
   |                                          expected struct `std::string::String`, found integer
   |                                          help: try using a conversion method: `3.to_string()`
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:46:42
   |
46 |     html! { <ChildComponent int=1 string={3} /> };
   |                                          ^^^
   |                                          |
   |                                          expected struct `std::string::String`, found integer
   |                                          help: try using a conversion method: `{3}.to_string()`
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:47:33
   |
47 |     html! { <ChildComponent int=0u32 /> };
   |                                 ^^^^ expected i32, found u32

error[E0599]: no method named `string` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:48:29
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `string` not found for this
...
48 |     html! { <ChildComponent string="abc" /> };
   |                             ^^^^^^

Some errors occurred: E0308, E0425, E0599, E0609.
For more information about an error, try `rustc --explain E0308`.
